<resources>
    <string name="app_name">Instagram</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="or">ou</string>
    <string name="does_not_have_account">
Não tem uma conta?
<b>
<font color="#000000">Cadastre-se.</font>
</b>
</string>
    <string name="already_has_account">
Já tem uma conta?
<b>
<font color="#000000">Faça login.</font>
</b>
</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="next">Avançar</string>
    <string name="name">Nome</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="continuee">Continuar</string>
    <string name="agree_terms_policy">
Ao clicar em Avançar, você concorda com nossos
<b>Termos, Política de Dados e Política de Cookies.</b>
</string>
    <string name="welcome_to_instagram">
<b>BEM-VINDO AO INSTAGRAM,\n%1$s</b>
\nEncontre pessoas para seguir e comece a compartilhar fotos. Você pode alterar seu nome de usuário a qualquer momento.
</string>
    <string name="photo_register_subtitle">Adicione uma foto do perfil para que seus amigos saibam que é você.</string>
    <string name="photo_register_title">Adicionar foto do perfil</string>
    <string name="take_picture">Tirar foto</string>
    <string name="search_gallery">Escolher na Biblioteca</string>
    <string name="define_photo_profile">Definir uma foto do perfil</string>
    <string name="jump">Pular</string>
    <string name="add_photo">Adicionar uma foto</string>
    <string name="home">Home</string>
    <string name="posts">publicações</string>
    <string name="followers">seguidores</string>
    <string name="following">seguindo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="username">username</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_name">Nome deve ter ao menos 3 caracteres</string>
    <string name="invalid_password">senha deve ter mais de 8 caracteres</string>
    <string name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
    <string name="save">Salvar</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Foto</string>
    <string name="gallery">Galeria</string>
    <string name="write_caption">Escreva uma descrição…</string>
    <string name="share">compartilhar</string>
    <string name="go">Avançar</string>
    <string name="search">Pesquisar</string>
    <string name="unfollow">Seguindo</string>
    <string name="follow">Seguir</string>
    <string name="logout">Deseja sair?</string>
    <string name="logout_action">Sair</string>
    <string name="cancel">Cancel</string>
    <string name="painel">Painel profissional\n<font Size="9">33 visualizações nos últimos 30 dias</font></string >
    <string name="settings_activity">Config_activity</string>
    <string name="descrition_post">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam ante non massa facilisis, quis convallis nisi pulvinar. Morbi posuere quam at turpis vulputate, et condimentum erat dapibus. Praesent porttitor ex eget odio blandit pretium. Proin sit amet consequat felis. Nam sed blandit metus, quis mollis elit. Fusce congue lectus em elit vulputate finibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fermentum mi libero, ut iaculis mi ornare eu. Proin venenatis est lacus, a sollicitudin augue vehicula vel. ID inteiro ligula dolor.</string>
    <string name="translater"> <font color="#626161">Há 4 horas</font> • <font color="#FF000000">ver tradução</font> </string>
    <string name="codname">\@Tome_tl</string>
</resources>