<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_botton_home"
        android:icon="@drawable/ic_insta_home"
        app:showAsAction="never"
        android:title="@string/home"/>
    <item android:id="@+id/menu_botton_search"
        android:icon="@drawable/ic_insta_search"
        android:title="@string/search"/>
    <item android:id="@+id/menu_botton_add"
        android:icon="@drawable/ic_insta_add"
        android:title="@string/add_photo"/>
    <item android:id="@+id/menu_botton_fav"
        android:icon="@drawable/ic_insta_heart"
        android:title="@string/unfollow"/>
    <item android:id="@+id/menu_botton_profile"
        android:icon="@drawable/ic_insta_profile"
        android:title="@string/edit_profile"/>





</menu>