<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_marginBottom="48dp"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="150dp"
                android:src="@drawable/photo_icon"
                android:contentDescription="@null"/>

            <TextView
                android:text="@string/photo_register_title"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
               style="@style/Theme.Instagram.TextViewBase.form"/>
            <TextView
                android:text="@string/photo_register_subtitle"

                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                style="@style/Theme.Instagram.TextViewBase.form"/>


            <Button
                android:id="@+id/register_btn_next"
                style="@style/Theme.Instagram.Button"
                android:text="@string/add_photo"
                android:enabled="false"
                />
            <Button
                android:id="@+id/register_txt_jump"
                android:text="@string/jump"
                style="@style/Theme.Instagram.Link"/>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>