<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/welcome_to_instagram"
                android:layout_marginHorizontal="16dp"
                style="@style/Theme.Instagram.TextViewBase.form"/>

            <Button
                android:id="@+id/register_btn_next"
                style="@style/Theme.Instagram.Button"
                android:text="@string/next"
                android:enabled="false"
                />
        </LinearLayout>
    </ScrollView>


    <TextView
        android:text="@string/agree_terms_policy"
        android:id="@+id/register_txt_terms"
        style="@style/Theme.Instagram.TextViewBase"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>