<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_img_logo"
            android:layout_marginBottom="48dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/instagram_logo_black"
            android:contentDescription="@null"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input"
            style="@style/Theme.Instagram.FormEditTextInput"
            app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_email"
           style="@style/Theme.Instagram.FormEditText"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:autofillHints="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input"
            style="@style/Theme.Instagram.FormEditTextInput"
            app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_password"
            style="@style/Theme.Instagram.FormEditText"
            android:hint="Senha"
            android:inputType="textPassword"
            android:autofillHints="@null"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn_enter"
            style="@style/Theme.Instagram.Button"
            android:text="@string/enter"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <View
                android:background="@color/gray_border"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="1dp"/>
            <TextView
                android:text="@string/or"
                android:layout_gravity="center"
                android:padding="8dp"
                style="@style/Theme.Instagram.TextViewBase"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_txt_register"
        android:background="@color/gray_dark"/>

    <TextView
        android:text="@string/does_not_have_account"
        android:id="@+id/login_txt_register"
        style="@style/Theme.Instagram.TextViewBase"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>