<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/home_img_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_insta_profile_thin"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/gray_border"
        app:civ_circle_background_color="@color/gray_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/txt_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@id/home_img_user"
        app:layout_constraintTop_toTopOf="@id/home_img_user"
        app:layout_constraintBottom_toBottomOf="@id/home_img_user"
        android:layout_marginStart="8dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/home_img_user"
        app:layout_constraintBottom_toBottomOf="@id/home_img_user"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/home_img_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_img_user" />
    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/home_img_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_like_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insta_heart"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />
        <ImageView
            android:id="@+id/img_like_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insta_comment"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:id="@+id/img_like_sharede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insta_send"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />
        <ImageView
            android:id="@+id/img_like_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/salvar3"
            android:layout_marginTop="16dp"
            android:layout_marginStart="230dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/txt_liked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txt_descretion_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_liked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/descrition_post"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txt_see_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_descretion_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="ver todos 1852 comentários"
        android:textColor="@color/dark"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txt_descretion_post_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_see_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/descrition_post"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txt_translater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_descretion_post_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/translater"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>